<resources>
    <string name="app_name">Aino Mobile Payment</string>
    <string name="exit">Exit</string>
    <string name="no_internet">Check Your Internet Connection</string>

    <string name="back_double">Please click BACK again to exit</string>
    <string name="email">Email</string>
    <string name="action_settings">Settings</string>
    <string name="user_management">User\nManagement</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_username">Enter the username</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="login">Login</string>
    <string name="atau">atau</string>
    <string name="forget_password">Forget Password?</string>
    <string name="belum_punya_akun_klik">Belum punya akun? klik</string>
    <string name="disini">disini</string>
    <string name="check_balance">Check Balance</string>
    <string name="payment_nfc">NFC Payment</string>
    <string name="scan_qr">Scan QR</string>
    <string name="generate_qr">Generate QR</string>
    <string name="type_payment">Payment Type :</string>
    <string name="type_conn">Connection Type :</string>
    <string name="mid">MID</string>
    <string name="tid">TID</string>
    <string name="midlbl">MID : </string>
    <string name="tidlbl">TID : </string>
    <string name="logout">Logout</string>
    <string name="ready_for_pos_command">Ready for POS command . . .</string>
    <string name="username">Username</string>
    <string name="ok">Ok</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="next">Next</string>
    <string name="save">Save</string>

    <string name="server_cert_asset_name">master-cacert.pem</string>
    <string name="client_cert_file_name">server.p12</string>
    <string name="pay">Pay</string>
    <string name="billing_reference">Billing Reference</string>
    <string name="amount">Amount</string>
    <string name="acc_number">Acc Number</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="devices_status">Devices Status :</string>

    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="bluetooth_found">Bluetooth Found</string>
    <string name="selected_device">Selected Device :</string>
    <string name="login_sucess">Login Successfully</string>
    <string name="ip_null">Target IP is null, please fill target ip or choose another connection.</string>
    <string name="port_null">Target Port is null, please fill target port or choose another connection.</string>
    <string name="type_conn_empty">Please choose connection type first inside Setting Menu.</string>
    <string name="bt_conn_empty">Please choose Bluetooth device first inside Setting Menu.</string>
    <string name="login_adm_fail">Admin Login Failed</string>
    <string name="pass_wrong">Wrong Password</string>
    <string name="user_already">Username exist</string>
    <string name="success_registeruser">User registered</string>
    <string name="puser_wrong">Username not registered</string>
    <string name="bluetooth_bounded">Bluetooth Bounded</string>
    <string name="ip_target">IP Target :</string>
    <string name="my_ip">My IP :</string>
    <string name="minus">-</string>
    <string name="cancel">Cancel</string>
    <string name="button_ok">Ok</string>
    <string name="back_setting_nodevices">Are you sure back with no connection selected?</string>
    <string name="listening_for_command">Listening for Command over</string>
    <string name="date">Date</string>
    <string name="ip_null_payment">Null IP, please go to Setting menu and fill the target IP address
         or chose Bluetooth connection</string>
    <string name="payment">Payment</string>
    <string name="scan_this_qr">Scan this QR to pay.</string>
    <string name="null_comm_from">Null command from POS.</string>
    <string name="port">Port :</string>
    <string name="payment_timeout">Payment timeout, please try again.</string>
    <string name="payment_success">Payment successfull</string>

    <string-array name="payment_type">
        <item>Bluetooth</item>
        <item>WiFi</item>
    </string-array>
</resources>
