<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/judulsetting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/action_settings"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/settingpertama"
                style="@style/layoutstle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/type_conn"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/spinnertype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:entries="@array/payment_type" />

                <!--&lt;!&ndash;<Button&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_marginTop="10dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:text="@string/zxing_button_ok"&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/okbtn"&ndash;&gt;-->
                <!--&lt;!&ndash;style="@style/buttonText"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_gravity="right"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content" />&ndash;&gt;-->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/settingbt"
                style="@style/layoutstle"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/discovered_devices"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/listdiscover"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_margin="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/paired_devices"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ListView
                    android:id="@+id/listbt"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_margin="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selected_device"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/selected_device"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" - "
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/settingwifi"
                style="@style/layoutstle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/devices_status"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/device_status_wifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minus"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/my_ip"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/myip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ip_target"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/iptarget"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/port"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/portt"
                        android:inputType="number"
                        android:text="1412"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>