<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/gambaratas"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/aino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gambaratas1"
        android:layout_width="30dp"
        android:visibility="gone"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        style="@style/layoutstle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gambaratas">

        <TableLayout
            android:id="@+id/tablelblpayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView84"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/payment"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:id="@+id/layip"
                android:visibility="gone"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"
                    android:text="@string/my_ip"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text=":"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/text_ipaddress"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="65"
                    android:text="-"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView79"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"
                    android:text="@string/date"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView83"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text=":"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/text_datetrf"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="65"
                    android:text="-"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView48"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="15"
                    android:text="@string/mid"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView50"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text=":"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/text_midtrf"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="65"
                    android:text="-"
                    android:textColor="@color/black" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView118"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="15"
                    android:text="@string/tid"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/textView119"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:text=":"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/text_tidtrf"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="65"
                    android:text="-"
                    android:textColor="@color/black" />
            </TableRow>
        </TableLayout>

        <ImageView
            android:id="@+id/gbrqr"
            android:layout_width="300dp"
            android:layout_below="@id/tablelblpayment"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gbrqr"
            android:layout_centerHorizontal="true"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/typeconnpayawal"
                android:text="@string/listening_for_command"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/typeconnpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wifi"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>